# managerx

./: .eslintrc.cjs  .gh_repo  .gh_token  .gitignore  .lintstagedrc.json  .prettierignore  .releaserc.json  CHANGELOG.md  PR_DESCRIPTION.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: canary.yml  ci.yml  release.yml  test-coverage.yml  weekly-autotuning.yml
apps/desktop/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  root.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: ClubAssistant.tsx  Layout.tsx  TelemetryConsent.tsx  WebWorkerSimulation.ts
apps/desktop/src/hooks/: useTelemetry.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/screens/: Calendar.tsx  Inbox.tsx  MainMenu.tsx  Match.tsx  NewGame.tsx  (+3 more)
docs/: MVP_CHECKLIST.md
docs/ANALYTICS/: dashboard.md  index.html
docs/GDD/: README.md
docs/RELEASE_NOTES/: README.md  v0.1.0.md
docs/TECH/: sim-core.md  testing-strategy.md
docs/UX/wireframes/: Calendario_Inbox.md  Dashboard.md  DiaDeJogo.md  Elenco.md  Scouting.md  Tatica.md
marketing/: README.md
marketing/copy/: marketing-copy.md
marketing/landing/: index.html
marketing/scripts/: export-assets.js
scripts/: update-version.js
tests/e2e/: navigation-flow.spec.ts  new-game-flow.spec.ts  save-load-flow.spec.ts  simulation-flow.spec.ts  test-utils.ts  ui-responsiveness.spec.ts
(+4 files in other folders)
