[package]
name = "managerx-desktop"
version = "0.1.0"
description = "ManagerX Tauri app"
authors = ["ManagerX AI Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


